[project]
name = "testrepo"
version = "0.0.0"  # DO NOT CHANGE -- set during build
description = "This is a test application."
authors = [{name = "Paul Lockaby", email = "paul@paullockaby.com"}]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = "^3.14 <3.15"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{include = "testrepo", from = "src"}]

# these are deprecated but necessary for dependabot
name = "testrepo"
version = "0.0.0"  # DO NOT CHANGE -- set during build
description = "This is a test application."
authors = ["Paul Lockaby <paul@paullockaby.com>"]

[tool.poetry.dependencies]
python = "^3.14 <3.15"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^7.0.0"
pytest-mypy = "^1.0.1"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
